<resources>

    <string name="app_name" translatable="false">EduKT</string>

    <string name="signup_toobar_tittle" translatable="true">Registro</string>

    <string name="login_toobar_tittle" translatable="true">Inicio de Sesión</string>

    <string name="welcome_msg1">¡BIENVENIDO!</string>

    <string name="welcome_msg2">¿Eres nuevo? Regístrate</string>

    <string name="btn_main_teacher" translatable="true">Soy Profesor</string>

    <string name="btn_main_student" translatable="true">Soy Estudiante</string>

    <string name="tv_main_login" translatable="true">Ya tengo una cuenta/Iniciar sesión</string>

    <string name="toolbar_text">EduKT</string>

    <string name="signup_msg">Registro exitoso</string>

    <string name="login_msg">Inicia Sesión</string>

    <!--Log in elements-->
    <string name="user_email_login">Ingresa tu email...</string>
    <string name="user_password_login">Ingresa tu contraseña...</string>
    <string name="login_button">INICIAR SESIÓN</string>

    <!--Form elements-->
    <string name="label_form_dni">Dni...</string>
    <string name="label_form_name">Nombre completo...</string>
    <string name="label_form_lastname">Apellido...</string>
    <string name="label_form_birthdate">Fecha de nacimiento...</string>
    <string name="label_form_email">Correo electrónico...</string>
    <string name="label_form_password">Contraseña...</string>
    <string name="btn_signup">REGISTRARSE</string>

    <!--spinner elements-->
    <string name="sp_signup_hint">Grado de escolaridad...</string>
    <string name="btn_login_teacher">Iniciar como profesor</string>
    <string name="btn_login_student">Iniciar como estudiante</string>
    <string-array name="sp_elements">
        <item>Primaria</item>
        <item>Bachillerato</item>
        <item>Universitario</item>
        <item>Técnica</item>
        <item>Tecnología</item>
    </string-array>

</resources>
